tests/testcases/errors/BCE0081-1.boo
"""
BCE0081-1.boo(5,1): BCE0081: A raise statement with no arguments is not allowed outside an exception handler.
"""
print('start')
raise
print('end')

